if(WIN32)
    add_link_options("-Wl,--export-all-symbols")
endif(WIN32)

foreach(plugin ${PLUGINS})
  if ("omemo" STREQUAL ${plugin})
    add_subdirectory(signal-protocol)
  endif ()
  if ("openpgp" STREQUAL ${plugin})
    add_subdirectory(gpgme-vala)
  endif ()
  add_subdirectory(${plugin})
endforeach(plugin)
